applications/masterhub/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masterhub-backend
  namespace: masterhub
  labels:
    app: masterhub-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: masterhub-backend
  template:
    metadata:
      labels:
        app: masterhub-backend
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: masterhub-backend
              
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: backend
          image: ndomi/mastershub-backend:test
          imagePullPolicy: Always
          
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
