applications/masterhub/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: masterhub-backend
  namespace: masterhub
spec:
  selector:
    app: masterhub-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
