applications/masterhub/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: masterhub-frontend
  namespace: masterhub
spec:
  selector:
    app: masterhub-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
